--- a/src/Component/Experience.css
+++ b/src/Component/Experience.css
@@ -83,12 +83,18 @@
 
 @media only screen and (max-width:430px) {
     #experience {
-        height: 60vh;
-        padding-top: 360%;
-        width: 80%;
+        height: 70vh;
+        /* padding-top: 360%; */
+       
         display: flex;
-        justify-content: flex-end;
+        justify-content: flex-start;
     }
 
-    
+    .nav-container {
+        margin-right: 150px !important;
+    }
+
+    .tab-pane p {
+        width: 200px !important;
+    }
 }
