--- a/src/Component/Home.css
+++ b/src/Component/Home.css
@@ -228,7 +228,7 @@ main h2 {
   main {
     width: 67%;
     padding-right: 15px !important;
-    height: 80vh !important;
+    height: 65vh !important;
 
   }
 
